# axum-example

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  common.sh  docker-build.sh  docker-run.sh  git-tag-version.sh  run.sh  test-routes.sh
.github/: dependabot.yml
.github/workflows/: cargo.yml  rust.yml
src/: admin.rs  config.rs  file_config.rs  logging.rs  main.rs  middleware.rs  openapi.rs  router.rs  routes.rs  schemas.rs  telemetry.rs  types.rs  utils.rs  version.rs
src/routing/: admin.rs  routes.rs
