[package]
name = "axum-example"
version = "0.12.3"
edition = "2024"
description = "Axum API example"
authors = ["Esgrove <esgrove@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/rust-axum-example"
rust-version = "1.90.0"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["http2", "macros"] }
axum-extra = { version = "0.12.5", features = ["with-rejection"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "env"] }
colored = "3.1.1"
dashmap = { version = "6.1.0", features = ["serde", "rayon", "inline"] }
dirs = "6.0.0"
itertools = "0.14.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "full"] }
toml = "0.9.12"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
# Only used in tests
http-body-util = "0.1.3"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Needed for Utoipa OpenApi derive
needless_for_each = "allow"
