[package]
name = "axum-example"
version = "0.13.0"
edition = "2024"
description = "Axum API example"
authors = ["Esgrove <esgrove@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/rust-axum-example"
rust-version = "1.96.0"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["http2", "macros"] }
axum-extra = { version = "0.12.6", features = ["with-rejection"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
dashmap = { version = "6.2.1", features = ["serde", "rayon", "inline"] }
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "metrics", "internal-logs"] }
opentelemetry-prometheus = "0.32.0"
opentelemetry_sdk = "0.32.1"
prometheus = "0.14.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
# Only used in tests
http-body-util = "0.1.3"
opentelemetry_sdk = { version = "0.32.1", features = ["testing"] }

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Needed for Utoipa OpenApi derive
needless_for_each = "allow"
